# This is a combination of 23 commits. # This is the 1st commit message:
Update README.md
# The commit message #2 will be skipped:

# Update README.md

# The commit message #3 will be skipped:

# Update README.md

# The commit message #4 will be skipped:

# update README

# The commit message #5 will be skipped:

# update README

# The commit message #6 will be skipped:

# update README

# The commit message #7 will be skipped:

# update README

# The commit message #8 will be skipped:

# update README

# The commit message #9 will be skipped:

# update README

# The commit message #10 will be skipped:

# update README

# The commit message #11 will be skipped:

# update README

# The commit message #12 will be skipped:

# update README

# The commit message #13 will be skipped:

# update README

# The commit message #14 will be skipped:

# Enhanced formatting

# The commit message #15 will be skipped:

# Update README.md

# The commit message #16 will be skipped:

# Update README.md

# The commit message #17 will be skipped:

# update README

# The commit message #18 will be skipped:

# update README

# The commit message #19 will be skipped:

# Update README

# The commit message #20 will be skipped:

# Update README.md

# The commit message #21 will be skipped:

# Update README.md

# The commit message #22 will be skipped:

# Update README

# The commit message #23 will be skipped:

# Update README.md

--- a/tutorials/utr-function-prediction/UTR-Function-Prediction.ipynb
+++ b/tutorials/utr-function-prediction/UTR-Function-Prediction.ipynb
@@ -377,7 +377,11 @@
    "metadata": {},
    "source": [
     "## 2. Load Data\n",
-    "You should download data from gdrive link: https://drive.google.com/file/d/10zCfOHOaOa__J2AIuZyidZ9sVJ9L11rI/view?usp=sharing or https://proj.cse.cuhk.edu.hk/rnafm/api/download?filename=GSM4084997_varying_length_25to100.csv, and place it in the tutorials/utr-function-prediction/data. You can also use `wget https://proj.cse.cuhk.edu.hk/rnafm/api/download?filename=GSM4084997_varying_length_25to100.csv -O data/GSM4084997_varying_length_25to100.csv`"
+    "\n",
+    "You should download data from gdrive link: https://drive.google.com/file/d/10zCfOHOaOa__J2AIuZyidZ9sVJ9L11rI/view?usp=sharing or https://proj.cse.cuhk.edu.hk/rnafm/api/download?filename=GSM4084997_varying_length_25to100.csv, and place it in the tutorials/utr-function-prediction/data.\n",
+    "\n",
+    "You can also use `wget https://proj.cse.cuhk.edu.hk/rnafm/api/download?filename=GSM4084997_varying_length_25to100.csv -O data/GSM4084997_varying_length_25to100.csv`\n",
+    "\n"
    ]
   },
   {
