--- a/tutorials/rna_family-clustering_type-classification/rnafm-tutorial-code.ipynb
+++ b/tutorials/rna_family-clustering_type-classification/rnafm-tutorial-code.ipynb
@@ -121,8 +121,8 @@
       "  Downloading pandas-1.3.5-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (12 kB)\r\n",
       "Collecting tqdm==4.62 (from rna-fm)\r\n",
       "  Downloading tqdm-4.62.0-py2.py3-none-any.whl.metadata (57 kB)\r\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.2/57.2 kB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hRequirement already satisfied: scikit-learn in /opt/conda/lib/python3.10/site-packages (from rna-fm) (1.2.2)\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m57.2/57.2 kB\u001B[0m \u001B[31m3.9 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\r\n",
+      "\u001B[?25hRequirement already satisfied: scikit-learn in /opt/conda/lib/python3.10/site-packages (from rna-fm) (1.2.2)\r\n",
       "Collecting ptflops (from rna-fm)\r\n",
       "  Downloading ptflops-0.7.2.2-py3-none-any.whl.metadata (7.2 kB)\r\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.10/site-packages (from pandas==1.3.5->rna-fm) (2.9.0.post0)\r\n",
@@ -141,14 +141,14 @@
       "Requirement already satisfied: MarkupSafe>=2.0 in /opt/conda/lib/python3.10/site-packages (from jinja2->torch->ptflops->rna-fm) (2.1.3)\r\n",
       "Requirement already satisfied: mpmath>=0.19 in /opt/conda/lib/python3.10/site-packages (from sympy->torch->ptflops->rna-fm) (1.3.0)\r\n",
       "Downloading rna_fm-0.2.1-py3-none-any.whl (46 kB)\r\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.6/46.6 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hDownloading numpy-1.22.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.8 MB)\r\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.8/16.8 MB\u001b[0m \u001b[31m82.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hDownloading pandas-1.3.5-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.5 MB)\r\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.5/11.5 MB\u001b[0m \u001b[31m84.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hDownloading tqdm-4.62.0-py2.py3-none-any.whl (76 kB)\r\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.0/76.0 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hDownloading ptflops-0.7.2.2-py3-none-any.whl (15 kB)\r\n",
+      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m46.6/46.6 kB\u001B[0m \u001B[31m3.2 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\r\n",
+      "\u001B[?25hDownloading numpy-1.22.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.8 MB)\r\n",
+      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m16.8/16.8 MB\u001B[0m \u001B[31m82.2 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\r\n",
+      "\u001B[?25hDownloading pandas-1.3.5-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.5 MB)\r\n",
+      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m11.5/11.5 MB\u001B[0m \u001B[31m84.7 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\r\n",
+      "\u001B[?25hDownloading tqdm-4.62.0-py2.py3-none-any.whl (76 kB)\r\n",
+      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m76.0/76.0 kB\u001B[0m \u001B[31m5.0 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\r\n",
+      "\u001B[?25hDownloading ptflops-0.7.2.2-py3-none-any.whl (15 kB)\r\n",
       "Installing collected packages: tqdm, numpy, pandas, ptflops, rna-fm\r\n",
       "  Attempting uninstall: tqdm\r\n",
       "    Found existing installation: tqdm 4.66.1\r\n",
@@ -162,7 +162,7 @@
       "    Found existing installation: pandas 2.1.4\r\n",
       "    Uninstalling pandas-2.1.4:\r\n",
       "      Successfully uninstalled pandas-2.1.4\r\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
+      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
       "cudf 23.8.0 requires cubinlinker, which is not installed.\r\n",
       "cudf 23.8.0 requires cupy-cuda11x>=12.0.0, which is not installed.\r\n",
       "cudf 23.8.0 requires ptxcompiler, which is not installed.\r\n",
@@ -223,20 +223,20 @@
       "woodwork 0.29.0 requires pandas>=1.4.3, but you have pandas 1.3.5 which is incompatible.\r\n",
       "xarray 2024.2.0 requires numpy>=1.23, but you have numpy 1.22.0 which is incompatible.\r\n",
       "xarray 2024.2.0 requires packaging>=22, but you have packaging 21.3 which is incompatible.\r\n",
-      "xarray 2024.2.0 requires pandas>=1.5, but you have pandas 1.3.5 which is incompatible.\u001b[0m\u001b[31m\r\n",
-      "\u001b[0mSuccessfully installed numpy-1.22.0 pandas-1.3.5 ptflops-0.7.2.2 rna-fm-0.2.1 tqdm-4.62.0\r\n",
+      "xarray 2024.2.0 requires pandas>=1.5, but you have pandas 1.3.5 which is incompatible.\u001B[0m\u001B[31m\r\n",
+      "\u001B[0mSuccessfully installed numpy-1.22.0 pandas-1.3.5 ptflops-0.7.2.2 rna-fm-0.2.1 tqdm-4.62.0\r\n",
       "Requirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (1.22.0)\r\n",
       "Collecting numpy\r\n",
       "  Downloading numpy-1.26.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (61 kB)\r\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.0/61.0 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hDownloading numpy-1.26.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.2 MB)\r\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.2/18.2 MB\u001b[0m \u001b[31m71.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hInstalling collected packages: numpy\r\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m61.0/61.0 kB\u001B[0m \u001B[31m3.3 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\r\n",
+      "\u001B[?25hDownloading numpy-1.26.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.2 MB)\r\n",
+      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m18.2/18.2 MB\u001B[0m \u001B[31m71.8 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\r\n",
+      "\u001B[?25hInstalling collected packages: numpy\r\n",
       "  Attempting uninstall: numpy\r\n",
       "    Found existing installation: numpy 1.22.0\r\n",
       "    Uninstalling numpy-1.22.0:\r\n",
       "      Successfully uninstalled numpy-1.22.0\r\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
+      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
       "cudf 23.8.0 requires cubinlinker, which is not installed.\r\n",
       "cudf 23.8.0 requires cupy-cuda11x>=12.0.0, which is not installed.\r\n",
       "cudf 23.8.0 requires ptxcompiler, which is not installed.\r\n",
@@ -279,21 +279,21 @@
       "woodwork 0.29.0 requires pandas>=1.4.3, but you have pandas 1.3.5 which is incompatible.\r\n",
       "xarray 2024.2.0 requires packaging>=22, but you have packaging 21.3 which is incompatible.\r\n",
       "xarray 2024.2.0 requires pandas>=1.5, but you have pandas 1.3.5 which is incompatible.\r\n",
-      "ydata-profiling 4.6.4 requires numpy<1.26,>=1.16.0, but you have numpy 1.26.4 which is incompatible.\u001b[0m\u001b[31m\r\n",
-      "\u001b[0mSuccessfully installed numpy-1.26.4\r\n",
+      "ydata-profiling 4.6.4 requires numpy<1.26,>=1.16.0, but you have numpy 1.26.4 which is incompatible.\u001B[0m\u001B[31m\r\n",
+      "\u001B[0mSuccessfully installed numpy-1.26.4\r\n",
       "Collecting biopython\r\n",
       "  Downloading biopython-1.83-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (13 kB)\r\n",
       "Requirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from biopython) (1.26.4)\r\n",
       "Downloading biopython-1.83-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.1 MB)\r\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m65.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hInstalling collected packages: biopython\r\n",
+      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m3.1/3.1 MB\u001B[0m \u001B[31m65.3 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\r\n",
+      "\u001B[?25hInstalling collected packages: biopython\r\n",
       "Successfully installed biopython-1.83\r\n"
      ]
     }
    ],
    "source": [
     "!pip install rna-fm\n",
-    "!pip install -U numpy\n",
+    "!pip install numpy==1.24.3\n",
     "!pip install biopython"
    ]
   },
@@ -451,7 +451,7 @@
     "\n",
     "print(f'using {device} device')\n",
     "\n",
-    "data_dir = '../input/rnafm-tutorial/'"
+    "data_dir = '../tutorial_data/'"
    ]
   },
   {
